--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
+
         </div>
         <!-- /.container-fluid -->
     </nav>
@@ -248,6 +249,11 @@
 
 
 
+
+
+
+
+
     <section id="language" class="contact bg-language">
         <div class="container">
             <h2>Languages</h2>
@@ -299,31 +305,26 @@
     <footer>
         <div class="container">
             <p>&copy; 2016 Man Ho Yin. All Rights Reserved.</p>
-            <ul class="list-inline">
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
+            <p>
+              Template by <a href = "https://startbootstrap.com/">startbootstrap</a>
+            </p>
+
         </div>
     </footer>
+
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/new-age.min.js"></script>
+    <script src="js/new-age.js"></script>
 <script>
 $( document ).ready(function() {
   var isRunning = false;
@@ -403,7 +404,13 @@ $( document ).ready(function() {
 
 });
 
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+}
 
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+}
 
 </script>
 </body>
